# wasm_logger

./: README.md
demo/: README.md  environment.sh  host_io_uring.c  logReducer.c  logReducer.py  log_writer.wat  run.sh
perfromance_test/: README.md
wasm_logger/: Cargo.toml
wasm_logger/src/: lib.rs
wasm_logger/src/LogGenerate/: hello.rs
wasm_logger/src/LogReducer/: logReducer.c  logReducer.py  logReducer.rs
wasm_logger/src/LogSystem/: global_logger.rs  logger.rs
wasm_logger/src/jslog/: jslog.rs
wasm_logger/src/util/htmlbutton/: htmlbutton.rs
wasm_logger/src/util/jskeypressmap/: keypressmap.rs
wasm_logger/src/util/textncount/: textncount.rs
wasm_logger/src/util/wasmcookie/: cookie.rs
wasm_logger/src/util/wrapspan/: wrapspan.rs
