[package]
name = "wasm_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
pyo3 = { version = "0.18", features = ["extension-module"] }
web-sys = { version = "0.3", features = ["console"] }
lazy_static = "1.4"

[build-dependencies]
wasm-bindgen-cli = "0.2"

[lib]
crate-type = ["cdylib"]